# project_quickstart

./: .codefactor.yml  .gitignore  .travis.yml  Dockerfile  Dockerfile_pipe_tests  Dockerfile_pq_all_tests  Dockerfile_pq_all_tests_ubuntu  KNOWN_BUGS.rst  MANIFEST.in  README.md  README.rst  THANKS.rst  TODO.rst  external_dependencies.rst  file_with_include.rst  project_PARAMS.ini  project_quickstart.ini  py_CONFIG_test.py  pyproject.toml  requirements.rst  requirements.txt  requirements_pq_example.sh  setup.cfg  setup.py  tox.ini  version.py
.github/workflows/: release.yml  tests.yml
docs/: KNOWN_BUGS.rst  Makefile  README.rst  THANKS.rst  TODO.rst  code_doc.rst  conf.py  external_dependencies.rst  getting_started.rst  include_links.rst  index.rst  make.bat  modules.rst  project_quickstart.rst  requirements.rst  scripts.rst
docs/_build/doctrees/: KNOWN_BUGS.doctree  README.doctree  THANKS.doctree  TODO.doctree  code_doc.doctree  environment.pickle  external_dependencies.doctree  getting_started.doctree  index.doctree  (+2 more)
docs/_build_html/: KNOWN_BUGS.html  README.html  TODO.html  code_doc.html  genindex.html  getting_started.html  index.html  modules.html  objects.inv  project_quickstart.html  py-modindex.html  requirements.html  scripts.html  search.html  searchindex.js  setup.html  version.html
examples/: plot_pq_example.py  plot_pq_example_mtcars.R  plot_pq_example_pandas.R  pq_example.py  pq_example_mtcars.R  svgutils_pq_example.py
examples/pipeline_pq_example/: pipeline_pq_example.py
legacy/: projectQuickstart.py.refactor
project_quickstart/: __init__.py  docopt_tests.py  example__init__.py  main.py  proj_quick_ipynb.ipynb  project-quickstart.py  projectQuickstart.py  projectQuickstart_2.py  project_quickstart.py  python_script_quickstart.py  script_quickstart.py  version.py
py3to2_baks/: conf.py.bak  version.py.bak
scripts/: .quickstart_utilities.py.swp  R_script_quickstart.R  python_script_quickstart.py  quickstart_utilities.py  script_quickstart.py
templates/: README_data.txt  TO_DO.rst  TO_DO_template.txt  cover_letter_template.rst  manuscript_template.rst  pipeline_template.ini  pipeline_template.py  project_template.ini  python_script_template.py  rsync_cmd.txt  substitution_vars.rst
templates/examples/: .Rhistory  Dockerfile_pq_example_alpine  Dockerfile_pq_example_ubuntu  README_dockerfiles.rst  examples.sh  plot_pq_example.py  plot_pq_example_mtcars.R  plot_pq_example_pandas.R  pq_example.R  pq_example.py  pq_example_mtcars.R  requirements.sh  svgutils_pq_example.py
templates/project_template/: .travis.yml  Dockerfile  MANIFEST.in  README.rst  THANKS.txt  TODO.rst  project_template.ini  project_template2.ini  requirements.txt  setup.cfg  setup.py  tox.ini  version.py
templates/python_packaging.dir/: .travis.yml  MANIFEST.in  PKG-INFO  README.rst  TODO.rst  setup.cfg  setup.py
templates/report_configs/: index.rst
templates/report_templates/: Makefile  README_report_docs.rst  conf.py  cover_letter_template.rst  index.rst  manuscript_template.rst  report_substitution_vars.rst
templates/script_templates/: find_this_file.R  plot_template.R  plot_template.py  plot_template_mtcars.R  plot_template_pandas.R  svgutils_template.py  template.R  template.py  template.sh  template_clean.R  template_mtcars.R
tests/: __init__.py  conftest.py  generate_python_file_lists.py  generate_ref_files.sh  pre_test_project_quickstart.py  test_project_quickstart.py  test_style.py
tests/helpers/: pytest_helpers.py
tests/ref_files/: pipeline_pq_test_ref.py_tree  pipeline_pq_test_ref.tree  pq_example.py_tree  pq_example.tree  pq_test_ref.R  pq_test_ref.py_tree  pq_test_ref.tree
to_clean/: project_quickstart.py  script_quickstart.py
(+97 files in other folders)
