[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project_quickstart"
dynamic = ["version"]
description = "Boilerplate tools and templates for setting up a data analysis project."
readme = "README.rst"
requires-python = ">=3.8"
dependencies = ["docopt"]
license = {file = "LICENSE"}

[tool.setuptools.dynamic]
version = {attr = "project_quickstart.version.__version__"}

