# Python configuration file for users to override setup.y, see:
# https://docs.python.org/3/distutils/configfile.html
# No values added here, left as a dummy 

[metadata]
description-file = README.rst

# The following is from: https://github.com/pypa/sampleproject/blob/master/setup.cfg

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1
